# streamlit_with_proxy

./: README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml
docker/: Dockerfile
streamlit_with_proxy/.streamlit/: config.toml
templates/: nginx.conf
