[tool.poetry]
name = "streamlit-with-proxy"
version = "0.1.0"
description = ""
authors = ["juliusaboagye <juliusaboagye45@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.46.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
